--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,7 @@
       <ul class="nav__links">
         <li class="link">Home</li>        
         <li class="link">Services</li>
-        <li class="link">Contacts</li>
-      </ul>
+        <li class="link">Contacts</li>      </ul>
     </nav>
     <header>
       <div class="section__container">
