--- a/public/assets/BookNow..html
+++ b/public/assets/BookNow..html
@@ -30,7 +30,7 @@
       <div class="form-group row">
         <label for="from" class="col-sm-2 col-form-label">From</label>
         <div class="col-sm-10">
-          <select class="form-control" id="from" name="From">
+          <select class="form-control" id="from" name="from">
             <option value="-1">Select</option>
             <option value="Janakpurdham">Janakpurdham</option>
             <option value="Deuriparbaha">Deuri Parbaha</option>
@@ -45,7 +45,7 @@
       <div class="form-group row">
         <label for="to" class="col-sm-2 col-form-label">To</label>
         <div class="col-sm-10">                               
-           <select class="form-control" id="to" name="To">
+           <select class="form-control" id="to" name="to">
             <option value="-1">Select</option>
             <option value="Inarwa">Inarwa</option>
             <option value="Khajuri">Khajuri</option>
